<resources>
    <string name="app_name">Green Thumb</string>
    <string name="letsgetstarted">Find me the perfect plant</string>
    <string name="about_us">About Us</string>
    <string name="lightTitle">How well-lit will your new plant\'s home be?</string>
    <string name="bright">Bright</string>
    <string name="somewhatShady">Somewhat Shady</string>
    <string name="howmuchattentiondoyouwanttogiveyourplant">How much attention will you give your plant?</string>
    <string name="lotsofattention">Lots of Attention</string>
    <string name="Notalotofattention">Not a lot of attention</string>
    <string name="wouldyoulikeshowyflowers">Would you like showy flowers</string>
    <string name="showyflowers">Would you like showy flowers?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="noflowers">No Flowers</string>
    <string name="iwantflower">I want flowers</string>
    <string name="wouldyoulikealargeorsmallplant">Would you like a large or small plant?</string>
    <string name="alargeplant">A Large Plant</string>
    <string name="asmallplant">A Small Plant</string>
    <string name="willyourplanthangorsit">Will your plant hang or sit?</string>
    <string name="hang">Hang</string>
    <string name="sit">Sit</string>
    <string name="stringofpearls">Your Curated Recommendation:\nString of Pearls</string>
    <string name="stringofpearlsinfo">Soil: Well\-drained\nGrowth Rate: Moderate\nHeight: 0.1m\nSpread: 0.3\-0.6m\nWater Use: Low</string>
    <string name="croton">Your Curated Recommendation:\nCroton</string>
    <string name="crotoninfo">Soil: Well\-Drained\nGrowth Rate: Slow\nHeight: Up to 6ft\nWidth: Up to 6ft\nWater Use: High\nNote: Mildly Toxic to Dogs and Cats</string>
    <string name="birdsnestfern">Your Curated Recommendation:\nBird\'s Nest Fern</string>
    <string name="birdsnestinfo">Soil: Acidic\nGrowth Rate: Fast\nHeight: 1.3m\-2m\nSpread: 0.6m\-1.0m\nWater Use: Moderate</string>
    <string name="aloevera">Your Curated Recommendation:\nAloe Vera</string>
    <string name="aloeverainfo">Soil: Well\-Drained\nGrowth Rate: Fast\nHeight: 0.4\-0.7m\nSpread: 0.3\-0.7m\nWater Use: Low\nNote: Widely used for medicinal purposes</string>
    <string name="swanriverdaisy">Your Curated Recommendation:\nSwan River Daisy</string>
    <string name="swanriverdaisyinfo">Color: White, Violet, or Blue\nFlowering: May-September\nSoil: Well\-Drained\nGrowth Rate: Fast\nHeight: 0.2\-0.4m\nSpread: 0.1\-0.3m\nWater Use: Moderate</string>
    <string name="anthurium">Your Curated Recommendation:\nAnthurium</string>
    <string name="anthuriuminfo">Flowers: White, Pink, Purple Red, Flowers anytime\nSoil: Well\-Drained\nGrowth Rate: Moderate\nHeight: 0.7\-1.3m, Spread: 0.3\-0.6m\nWater Use: Low</string>
    <string name="snapdragon">Your Curated Recommendation:\nSnapdragon</string>
    <string name="snapdragoninfo">Flowers: April to October\nSoil: Alkaline, Well\-Drained\nGrowth Rate: Fast\nHeight:0.4\-0.7m\nSpread: 0.1\-0.3m\nWater Use: Moderate</string>
    <string name="kalanchoe">Your Curated Recommendation:\nKalanchoe</string>
    <string name="kalanchoeinfo">Flowers: Yellow, Pink, Red, Orange\n Flowering: Aug.\-Oct.\nSoil: Well\-Drained\nGrowth Rate: Slow\nHeight: 0.3\-0.4m\nSpread:0.3\-0.6m\nWater Use: Low\nNote: Grows well in a hanging basket as well</string>
    <string name="spiderplant">Your Curated Recommendation:\nSpider Plant</string>
    <string name="spiderplantinfo">Soil: Well\-Drained\nGrowth Rate: Fast\nHeight: 0.2\-0.4m\nSpread: 0.3\-0.6m\nWater Use: High</string>
    <string name="moneyplant">Your Curated Recommendation:\nMoney Plant</string>
    <string name="moneytreeinfo">Soil: Hummus rich, Well\-Drained\n Growth Rate: Moderate\nHeight: 1.3\-2.0m\nSpread: 0.6\-1m\nWater Use: Moderate</string>
    <string name="burrostail">Your Curated Recommendation:\nBurro\'s-Tail Plant</string>
    <string name="burrostailinfo">Soil: Well\-Drained\nGrowth Rate: Slow\nHeight: 0.2\-0.4m\nSpread: 0.1\-0.3m\nWater Use: Low</string>
    <string name="jadeplant">Your Curated Recommendation:\nJade Plant</string>
    <string name="jadeplantinfo">Flowers: White or pink flowers in winter or fall\nNote: Requires high maintenance if you want your plant to flower\nSoil: Well\-Drained\nGrowth Rate: Slow\nHeight: 1.3\-2m\nSpread: 1\-1.5m\nWater Use: Low</string>
    <string name="poinsettia">Your Curated Recommendation:\nPoinsettia</string>
    <string name="poinsettiainfo">Flowering: Various colors, November - January\nSoil: Well\-Drained\nGrowth Rate: Moderate\nHeight: 3\-5m\nSpread: 1.5\-2m\nWater Use: Moderate</string>
    <string name="bushlily">Your Curated Recommendation:\nBush Lily</string>
    <string name="bushlilyinfo">Flowers: Orange, Yellow, Red\nSoil: Well\-Drained\nGrowth Rate: Slow\nHeight: 0.4\-0.7m\nSpread: 0.3\-0.6m\nWater Use: Low\nNote: Avoid poisonous parts</string>
    <string name="crocus">Your Curated Recommendation:\nCrocus</string>
    <string name="crocusinfo">Flowers: Yellow, Violet, White\nFlowering: Feb.\-Mar.\nSoil: Well\-Drained\nGrowth Rate: Fast\nHeight: 0.1\-0.2m\nSpread: 0.1m\nWater Use: Moderate</string>
    <string name="fuchsia">Your Curated Recommendation:\nFuchsia</string>
    <string name="fuchsiainfo">Flowers: White, Purple, Pink, Red\nFlowering: May\-Oct.\nSoil: Well\-Drained\nGrowth Rate: Fast\nHeight: 0.2\-0.3m\nSpread: 0.3\-0.6m\nWater Use: Moderate</string>
    <string name="heartleafphilodendron">Your Curated Recommendation:\nHeart-Leaf Philodendron</string>
    <string name="heartleafphilodendroninfo">Soil: Well\-Drained\nGrowth Rate: Fast\nHeight: 3\-5m\nSpread: 3\-4m\nWater Use: Low</string>
    <string name="bostonfern">Your Curated Recommendation:\nBoston Fern</string>
    <string name="bostonferninfo">Soil: Well\-Drained\nGrowth Rate: Moderate\nHeight: 0.7\-1.3m\nSpread: 1.5\-2m\nWater Use: High\nNote: High humidity needed, keep humidifier running in the winter. Cool temperature at night.</string>
    <string name="parlourpalm">Your Curated Recommendation:\nParlour Palm</string>
    <string name="parlourpalminfo">Flowers: White, Yellow\nFlowering: June\-August\nSoil: loam soil\nGrowth Rate: Slow\nHeight: 2\-3m\nSpread: 1\-1.5m\nWater Use: Moderate\nFun Fact: Was considered a symbol of affluence in the Victorian Era</string>
    <string name="dumbcane">Your Curated Recommendation:\nDumb Cane Plant</string>
    <string name="dumbcaneinfo">Flowers: White, Yellow\nFlowering: April\-June\nSoil: Hummus rich, well\-drained\nGrowth Rate: Moderate\nHeight: 2\-3m\nSpread: 1\-1.5m\nWater Use: Low\nNote: Best flowering results outdoors, but can be grown indoors too\nCaution: Sap causes irritation</string>
    <string name="coleus">Your Curated Recommendation:\nColeus</string>
    <string name="coleusinfo">Flowering: Aug.\-Sept.\nSoil: Well\-Drained\nGrowth Rate: Fast\nHeight: 0.4\-0.7m\nSpread: 0.3\-0.6m\nWater Use: Moderate\nNote: Soil should remain damp</string>
    <string name="boatorchid">Your Curated Recommendation:\nBoat Orchid</string>
    <string name="boatorchidinfo">Flowering: Various colors, Nov.\-Mar.\nSoil: Slightly acidic\nGrowth Rate: Moderate\nHeight: 0.4\-0.7m\nSpread: 0.1\-0.3m\nWater Use: Moderate\nNote: Sensitive to heat</string>
    <string name="devilsivy">Your Curated Recommendation:\nDevil\'s Ivy</string>
    <string name="devilsivyinfo">Soil: Well\-Drained\nGrowth Rate: Fast\nMature Height: 10\-15m\nSpread: 7\-10m\nWater Use: Low\nNote: Tiny flowers may bloom, but only if outdoors</string>
    <string name="cornplant">Your Curated Recommendation:\nCorn Plant</string>
    <string name="cornplantinfo">Growth Rate: Slow\nHeight: 0.7\-1.3m\nSpread: 0.6\-1m\nWater Use: Moderate, Dry in winter</string>
    <string name="zzplant">Your Curated Recommendation:\nZZ Plant</string>
    <string name="zzplantinfo">Soil: Well\-Drained\nGrowth Rate: Slow\nHeight: 0.4\-0.7m\nSpread: 0.3\-0.6m\nWater Use: Low</string>
    <string name="luckybamboo">Your Curated Recommendation:\nLucky Bamboo</string>
    <string name="luckybambooinfo">Soil: Well\-Drained\nGrowth Rate: Moderate\nHeight: 0.7\-1.3m\nSpread: 0.3\n0.6m\nWater Use: Low\nNote: Can be grown in nutrient-water mixture or soil</string>
    <string name="deadnettle">Your Curated Recommendation:\nDead Nettle</string>
    <string name="deadnettleinfo">Flowers: White, Pink, Purple, Red\nFlowering: June\-August\nSoil: Well\-Drained\nGrowth Rate: Fast\nHeight: 0.2\-0.4m\nSpread: 0.6\-1m\nWater Use: Moderate</string>
    <string name="impatiens">Your Curated Recommendation:\nImpatiens</string>
    <string name="impatiensinfo">Flowers: White, Pink, Purple, Red, Orange\nFlowering: May\-October\nSoil: Well\-Drained\nGrowth Rate: Fast\nHeight: 0.4\-0.7m\nSpread: 0.3\-0.6m\nWater Use: High\nNote: Prefers filtered shade, part sun-shade</string>
    <string name="peacelily">Your Curated Recommendation:\nPeace Lily</string>
    <string name="peacelilyinfo">Flowers: White, Flowers Any Month\nSoil: Well\-Drained\nGrowth Rate: Moderate\nHeight: 0.4\-0.7m\nSpread: 0.3\-0.6m\nWater Use: Moderate</string>
    <string name="tuberousbegonia">Your Curated Recommendation:\nTuberous Begonia</string>
    <string name="tuberousbegoniainfo">Flowers: Yellow, Orange, Pink, Red\nFlowering: June\-Sept.\nSoil: Well\-Drained\nGrowth Rate: Moderate\nHeight: 0.2\-0.4m\nSpread: 0.1\-0.3m\nWater Use: Moderate</string>
    <string name="prayerplant">Your Curated Recommendation:\nPrayer Plant</string>
    <string name="prayerplantinfo">Soil: Well\-Drained\nGrowth Rate: Moderate\nHeight: 0.2\-0.4m\nSpread: 0.3\-0.6m\nWater Use: Moderate\nNote: Maintain high humidity</string>
    <string name="chineseevergreen">Your Curated Recommendation:\nChinese Evergreen</string>
    <string name="chineseevergreeninfo">Soil: Well\-Drained\nGrowth Rate: Slow\nHeight: 0.7\-1.3m\nSpread: 0.3\-0.6m\nWater Use: Low\nNote: Sensitive to heat and cold temperature</string>
    <string name="learnmore">Learn More!</string>
    <string name="mygreenthumb">My Green Thumb</string>
</resources>