<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".birdsnestfern">

  <TextView
      android:id="@+id/textView101"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="serif"
      android:gravity="center"
      android:text="@string/birdsnestfern"
      android:textColor="@android:color/background_dark"
      android:textSize="30sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView102"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:fontFamily="serif"
      android:gravity="center"
      android:text="@string/birdsnestinfo"
      android:textSize="30sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView22" />

  <ImageView
      android:id="@+id/imageView22"
      android:layout_width="391dp"
      android:layout_height="341dp"
      android:layout_marginTop="10dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView101"
      app:srcCompat="@drawable/birdsnestfern" />

  <Button
      android:id="@+id/button23"
      android:layout_width="124dp"
      android:layout_height="48dp"
      android:layout_marginTop="8dp"
      android:onClick="goOnline"
      android:text="@string/learnmore"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView102" />
</androidx.constraintlayout.widget.ConstraintLayout>