<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".anthurium">

  <TextView
      android:id="@+id/textView107"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="serif"
      android:gravity="center"
      android:text="@string/anthurium"
      android:textColor="@android:color/background_dark"
      android:textSize="30sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView108"
      android:layout_width="411dp"
      android:layout_height="248dp"
      android:layout_marginTop="8dp"
      android:fontFamily="serif"
      android:gravity="center"
      android:text="@string/anthuriuminfo"
      android:textSize="30sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView11" />

  <ImageView
      android:id="@+id/imageView11"
      android:layout_width="197dp"
      android:layout_height="320dp"
      android:adjustViewBounds="true"
      android:cropToPadding="true"
      android:scaleType="fitXY"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView107"
      app:srcCompat="@drawable/anthurium" />

  <Button
      android:id="@+id/button6"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:onClick="GoOnline"
      android:text="@string/learnmore"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView108" />

</androidx.constraintlayout.widget.ConstraintLayout>