<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".aloe_vera">

  <TextView
      android:id="@+id/textView103"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="serif"
      android:gravity="center"
      android:text="@string/aloevera"
      android:textColor="@android:color/background_dark"
      android:textSize="24sp"
      app:layout_constraintBottom_toTopOf="@+id/imageView3"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView104"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:fontFamily="serif"
      android:gravity="center"
      android:text="@string/aloeverainfo"
      android:textSize="30sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView3" />

  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="257dp"
      android:layout_height="293dp"
      android:layout_marginTop="13dp"
      android:scaleType="fitXY"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView103"
      app:srcCompat="@drawable/aloe_vera" />

  <Button
      android:id="@+id/button4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:onClick="GoOnline"
      android:text="@string/learnmore"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView104" />

</androidx.constraintlayout.widget.ConstraintLayout>