<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/woodbackground1"
    tools:context=".swan_river_daisy">

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="300dp"
      android:layout_height="210dp"
      android:layout_marginTop="8dp"
      android:adjustViewBounds="true"
      android:cropToPadding="false"
      android:scaleType="fitXY"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView105"
      app:srcCompat="@drawable/swan_river_daisy" />

  <TextView
      android:id="@+id/textView105"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="serif"
      android:gravity="center"
      android:text="@string/swanriverdaisy"
      android:textColor="@android:color/white"
      android:textSize="30sp"
      app:layout_constraintBottom_toTopOf="@+id/imageView2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <TextView
      android:id="@+id/textView106"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="serif"
      android:gravity="center"
      android:text="@string/swanriverdaisyinfo"
      android:textColor="@android:color/white"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView2" />

  <Button
      android:id="@+id/button5"
      android:layout_width="150dp"
      android:layout_height="50dp"
      android:layout_marginTop="8dp"
      android:onClick="GoOnline"
      android:text="@string/learnmore"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView106" />
</androidx.constraintlayout.widget.ConstraintLayout>